Bug 145317 - FILESAVE DOC/X: Header/Footer text lost from follow style when first style has titlePage
Summary: FILESAVE DOC/X: Header/Footer text lost from follow style when first style ha...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.3.0
Keywords: bibisected, bisected
Depends on:
Blocks: 136472
  Show dependency treegraph
 
Reported: 2021-10-25 18:34 UTC by Justin L
Modified: 2021-11-02 09:12 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
first-header-footer_exportBroken.odt: First Page page style has First header (10.85 KB, application/vnd.oasis.opendocument.text)
2021-10-25 18:34 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2021-10-25 18:34:57 UTC
Created attachment 175916 [details]
first-header-footer_exportBroken.odt: First Page page style has First header

This hasn't worked properly. Prior to 5.2, a round-trip to DOC or DOCX formats was missing the first page headers. But after 5.2.4, the situation was reversed with commit 1bfa382b4af649ff2b56b988d89bada156e29078
Author: Michael Stahl on Tue Oct 25 17:35:59 2016 +0200
    tdf#101814 sw: MSWord export: don't override first-page with heuristics
Comment 1 Justin L 2021-10-26 11:22:07 UTC
proposed fix at http://gerrit.libreoffice.org/c/core/+/124213
Comment 2 Commit Notification 2021-11-02 08:58:55 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f5c618f4e5d3ef2a33301d5f20035bb8bc213a38

tdf#145317 sw ms export: handle First Page with a first header

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.