tdf#145317 sw ms export: handle First Page with a first header

partial revert of LO 5.2.4's tdf#101814.

Just because the page style has a first doesn't mean that it
should not check if it is also a first-follow that could be
merged into a single ww8section.

In this case, the follow page-style's H/F definitions were
lost, because only the First Page style was considered.

No existing unit tests matched these conditions.

I did test bug 101814's CAFCA - Modèle feuille A4 - v2015-2.odt
and it still shows the same H/F.

Change-Id: I7389f8d85ba24a3f9c6487efe4acd27d96b0869c